--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-    <script src="lib/Chart.js"></script>
+    <script src="https://cdn.bootcss.com/Chart.js/2.6.0/Chart.js"></script>
     <script src="src/fangjia-chart.js"></script>
 </head>
 <body>
