--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,8 @@
     <title>Title</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/Chart.js/2.6.0/Chart.js"></script>
-    <script src="src/fangjia-chart.js"></script>
+    <script src="src/raw-rent-data.js"></script>
+    <script src="src/rent-chart.js"></script>
 </head>
 <body>
 <canvas id="myChart" width="800" height="450"></canvas>
